[gd_scene load_steps=26 format=3 uid="uid://buq8n2bm72jkh"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_68hbw"]
[ext_resource type="PackedScene" uid="uid://idw6ievt7oqk" path="res://Scenes/Base/HomeBase.tscn" id="2_4eklg"]
[ext_resource type="Script" path="res://Scripts/UI/PlacementScript.gd" id="4_e5tm1"]
[ext_resource type="Script" path="res://Scripts/UI/CameraMoveScript.gd" id="4_hsmcj"]
[ext_resource type="Script" path="res://Scripts/UI/MousePointer.gd" id="5_5yk3y"]
[ext_resource type="Texture2D" uid="uid://bkfopj7vj5lxe" path="res://Sprites/kenney_pixel-shmup/Tiles/tile_0027.png" id="6_1nhsn"]
[ext_resource type="Texture2D" uid="uid://bektf85ultbvo" path="res://Sprites/kenney_pixel-shmup/Ships/ship_0009.png" id="6_2iqs1"]
[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="6_4u325"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemySpawning.gd" id="6_i4kkq"]
[ext_resource type="Texture2D" uid="uid://c40wbt4w57hjc" path="res://Sprites/kenney_ui-pack/PNG/grey_button10.png" id="7_83lhs"]
[ext_resource type="Script" path="res://Scripts/UI/PlaneSelector.gd" id="7_rmv1c"]
[ext_resource type="ButtonGroup" uid="uid://c0v6iwadftcho" path="res://Scenes/UI/button_group.tres" id="8_3go7y"]
[ext_resource type="Texture2D" uid="uid://chbrsiuuveg1k" path="res://Sprites/kenney_ui-pack/PNG/blue_button09.png" id="8_ajk76"]
[ext_resource type="Texture2D" uid="uid://br1e2lmys2st7" path="res://Sprites/kenney_pixel-shmup/Ships/ship_0008.png" id="9_vs3sc"]
[ext_resource type="Texture2D" uid="uid://xye0agkvicro" path="res://Sprites/kenney_ui-pack/PNG/grey_button08.png" id="10_c0r4v"]
[ext_resource type="Texture2D" uid="uid://3l1e0kdjwaan" path="res://Sprites/kenney_pixel-shmup/Ships/ship_0010.png" id="11_kn65q"]
[ext_resource type="Texture2D" uid="uid://c7t8n5t2pkkk7" path="res://Sprites/kenney_pixel-shmup/Ships/ship_0011.png" id="12_l3sow"]
[ext_resource type="Texture2D" uid="uid://ivcggvsxfcta" path="res://Sprites/kenney_ui-pack/PNG/grey_arrowDownGrey.png" id="12_r1qwl"]
[ext_resource type="PackedScene" uid="uid://boetjb5hxfqr6" path="res://Scenes/Menus/StartScreen.tscn" id="22_6qrro"]
[ext_resource type="AudioStream" uid="uid://b58fpmjn1buuf" path="res://Audio/At Launch.mp3" id="22_jfbnu"]
[ext_resource type="PackedScene" uid="uid://d4h8m34mgcgy1" path="res://Scenes/UI/PauseMenu.tscn" id="22_rdyfe"]
[ext_resource type="PackedScene" uid="uid://dkug4icwa1ysw" path="res://Scenes/tile_map.tscn" id="23_8jj2y"]
[ext_resource type="PackedScene" uid="uid://djvbsc1d6q1p7" path="res://Scenes/Menus/DeathScreen.tscn" id="24_dsfq5"]

[sub_resource type="Curve2D" id="Curve2D_3bfa2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -211, -254, 0, 0, 0, 0, 887, -262, 0, 0, 0, 0, 888, 563, 0, 0, 0, 0, -216, 564, 0, 0, 0, 0, -211, -254)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1vn4"]
size = Vector2(14, 14)

[node name="Game" type="Node2D"]
script = ExtResource("1_68hbw")

[node name="TileMap" parent="." instance=ExtResource("23_8jj2y")]

[node name="HomeBase" parent="." instance=ExtResource("2_4eklg")]
visible = false
position = Vector2(266, 158)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(268, 159)
zoom = Vector2(1.2, 1.2)
limit_left = -500
limit_top = -500
limit_right = 1000
limit_bottom = 800
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("4_hsmcj")

[node name="AllyPlanes" type="Node2D" parent="."]
script = ExtResource("4_e5tm1")

[node name="EnemyPlanes" type="Node2D" parent="."]
script = ExtResource("6_i4kkq")

[node name="EnemyPlaneSpawner" type="Path2D" parent="EnemyPlanes"]
curve = SubResource("Curve2D_3bfa2")

[node name="SpawnPoint" type="PathFollow2D" parent="EnemyPlanes/EnemyPlaneSpawner"]
unique_name_in_owner = true
position = Vector2(-211, -254)
rotation = -0.00728585

[node name="MousePointer" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 20
script = ExtResource("5_5yk3y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MousePointer"]
shape = SubResource("RectangleShape2D_j1vn4")

[node name="PlaceIndicator" type="Sprite2D" parent="MousePointer"]
texture = ExtResource("6_1nhsn")

[node name="UI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("6_4u325")

[node name="NextWave" type="TextureButton" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -346.0
offset_top = -80.0
offset_right = -297.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("10_c0r4v")
texture_disabled = ExtResource("7_83lhs")

[node name="Sprite2D" type="Sprite2D" parent="UI/NextWave"]
position = Vector2(24, 23)
rotation = -1.5708
scale = Vector2(1.5, 2.664)
texture = ExtResource("12_r1qwl")

[node name="Continous Waves" type="Label" parent="UI/NextWave"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.5
offset_top = 3.0
offset_right = 21.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "Continous Waves: False"

[node name="FastForward" type="TextureButton" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -413.0
offset_top = -79.0
offset_right = -364.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("10_c0r4v")

[node name="Label" type="Label" parent="UI/FastForward"]
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.298039, 0.298039, 0.298039, 1)
theme_override_font_sizes/font_size = 30
text = "x1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="UI"]
offset_right = 51.0
offset_bottom = 23.0
text = "Wave: "

[node name="ScoreLabel" type="Label" parent="UI"]
offset_top = 30.0
offset_right = 40.0
offset_bottom = 53.0
text = "Score:"

[node name="Money" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.84
anchor_right = 0.5
anchor_bottom = 0.84
offset_left = -20.0
offset_top = -0.320007
offset_right = 20.0
offset_bottom = 22.68
grow_horizontal = 2
grow_vertical = 0
text = "Money"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlaneSelector" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -80.0
offset_right = 117.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("7_rmv1c")

[node name="BluePlaneButton" type="TextureButton" parent="UI/PlaneSelector"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_3go7y")
texture_normal = ExtResource("7_83lhs")
texture_pressed = ExtResource("8_ajk76")

[node name="Sprite2D" type="Sprite2D" parent="UI/PlaneSelector/BluePlaneButton"]
position = Vector2(24.5, 22)
texture = ExtResource("9_vs3sc")

[node name="Label" type="Label" parent="UI/PlaneSelector/BluePlaneButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 52.0
offset_right = 45.0
offset_bottom = 75.0
text = "$100"

[node name="RedPlaneButton" type="TextureButton" parent="UI/PlaneSelector"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_3go7y")
texture_normal = ExtResource("7_83lhs")
texture_pressed = ExtResource("8_ajk76")

[node name="Sprite2D" type="Sprite2D" parent="UI/PlaneSelector/RedPlaneButton"]
position = Vector2(24.5, 22)
texture = ExtResource("6_2iqs1")

[node name="Label" type="Label" parent="UI/PlaneSelector/RedPlaneButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 52.0
offset_right = 45.0
offset_bottom = 75.0
text = "$200"

[node name="GreenPlaneButton" type="TextureButton" parent="UI/PlaneSelector"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_3go7y")
texture_normal = ExtResource("7_83lhs")
texture_pressed = ExtResource("8_ajk76")

[node name="Sprite2D" type="Sprite2D" parent="UI/PlaneSelector/GreenPlaneButton"]
position = Vector2(24.5, 22)
texture = ExtResource("11_kn65q")

[node name="Label" type="Label" parent="UI/PlaneSelector/GreenPlaneButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 51.0
offset_right = 45.0
offset_bottom = 74.0
text = "$200"

[node name="YellowPlaneButton" type="TextureButton" parent="UI/PlaneSelector"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_3go7y")
texture_normal = ExtResource("7_83lhs")
texture_pressed = ExtResource("8_ajk76")

[node name="Sprite2D" type="Sprite2D" parent="UI/PlaneSelector/YellowPlaneButton"]
position = Vector2(24.5, 22)
texture = ExtResource("12_l3sow")

[node name="Label" type="Label" parent="UI/PlaneSelector/YellowPlaneButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 51.0
offset_right = 44.0
offset_bottom = 74.0
text = "$300"

[node name="PauseMenu" parent="UI" instance=ExtResource("22_rdyfe")]
visible = false

[node name="StartScreen" parent="." instance=ExtResource("22_6qrro")]

[node name="DeathScreen" parent="." instance=ExtResource("24_dsfq5")]
visible = false

[node name="BG_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_jfbnu")

[connection signal="wave_clear" from="EnemyPlanes" to="." method="_on_enemy_planes_wave_clear"]
[connection signal="area_entered" from="MousePointer" to="MousePointer" method="_on_area_entered"]
[connection signal="area_exited" from="MousePointer" to="MousePointer" method="_on_area_exited"]
[connection signal="pressed" from="UI/NextWave" to="." method="_on_next_wave_pressed"]
[connection signal="button_down" from="UI/FastForward" to="." method="_on_fast_forward_pressed"]
[connection signal="start_game" from="StartScreen" to="." method="_on_texture_button_button_down"]
[connection signal="finished" from="BG_Music" to="." method="_on_bg_music_finished"]
